--- a/index.html
+++ b/index.html
@@ -15,6 +15,19 @@
         .logo-text { font-weight: bold; color: var(--p2); font-size: 22px; }
         .vr-link { text-decoration: none; display: flex; align-items: center; gap: 8px; color: #ff4d4f; font-weight: bold; font-size: 13px; }
 
+        /* تعديلات القلب: تكبير وجعله نابضاً */
+        .beating-heart {
+            font-size: 20px; /* حجم أكبر */
+            display: inline-block;
+            animation: pulse-animation 1.2s infinite; /* تأثير النبض */
+        }
+
+        @keyframes pulse-animation {
+            0% { transform: scale(1); }
+            50% { transform: scale(1.3); }
+            100% { transform: scale(1); }
+        }
+
         .page { display: none; padding: 15px; animation: fadeIn 0.4s ease; }
         .page.active { display: block; }
         @keyframes fadeIn { from {opacity:0;} to {opacity:1;} }
@@ -53,10 +66,6 @@
         .comment-input { flex: 1; border: 1px solid #eee; border-radius: 20px; padding: 5px 12px; font-size: 12px; outline: none; }
         .comment-submit { background: var(--p2); border: none; color: white; border-radius: 50%; width: 28px; height: 28px; }
 
-        .group-chat-area { background: #f0f2f5; padding: 10px; border-radius: 12px; margin-top: 10px; border: 1px solid #e0e0e0; }
-        .chat-msg-item { font-size: 11px; margin-bottom: 5px; animation: slideIn 0.3s ease; }
-        @keyframes slideIn { from { transform: translateY(5px); opacity: 0; } to { transform: translateY(0); opacity: 1; } }
-
         #chat-overlay { display: none; position: fixed; top: 0; left: 0; width: 100%; height: 100%; background: white; z-index: 2000; flex-direction: column; }
         .chat-header { padding: 15px; border-bottom: 1px solid #eee; display: flex; align-items: center; justify-content: space-between; background: var(--soft); }
         .chat-messages { flex: 1; overflow-y: auto; padding: 20px; display: flex; flex-direction: column; gap: 12px; }
@@ -64,7 +73,6 @@
         .msg-user { align-self: flex-start; background: #f0f0f0; border-radius: 0 15px 15px 15px; }
         .msg-ai { align-self: flex-end; background: var(--soft); border-right: 4px solid var(--p2); border-radius: 15px 0 15px 15px; }
         
-        /* أدوات الشات الإضافية */
         .chat-tools { display: flex; gap: 15px; padding: 5px 15px; background: #fff; border-top: 1px solid #eee; justify-content: center; }
         .chat-tools i { color: var(--p2); font-size: 18px; cursor: pointer; padding: 5px; }
         .speak-btn { margin-right: 8px; cursor: pointer; color: var(--p2); font-size: 12px; }
@@ -89,7 +97,7 @@
     <header class="top-nav">
         <a href="https://facebook.com/raqqa" style="color:#1877f2;"><i class="fab fa-facebook fa-lg"></i></a>
         <div class="logo-text">رقة</div>
-        <a href="#" class="vr-link"><i class="fas fa-heart"></i> عالم رقة</a>
+        <a href="#" class="vr-link"><i class="fas fa-heart beating-heart"></i> عالم رقة الافتراضي</a>
     </header>
 
     <div id="page-home" class="page active"><div style="text-align:center; padding:60px 20px;"><i class="fas fa-sparkles" style="font-size:50px; color:var(--p1);"></i><h2 style="color:var(--p2);">مرحباً بكِ في رقة 🌸</h2></div></div>
@@ -237,17 +245,9 @@
 
                     const commentsHtml = (p.comments || []).map(c => `<div class="comment-item"><span class="comment-user">رقة:</span> ${c.comment_text}</div>`).join('');
                     
-                    let swingChatHtml = '';
-                    if(tab === 'swing') {
-                        swingChatHtml = `
-                            <div class="group-chat-area">
-                                <div style="font-weight:bold; font-size:10px; color:var(--purp); margin-bottom:5px;"><i class="fas fa-users"></i> شات جماعي مباشر للمنشور:</div>
-                                <div id="group-chat-msgs-${p.id}" style="max-height:80px; overflow-y:auto; margin-bottom:5px;"></div>
-                                <div class="comment-input-area">
-                                    <input type="text" id="group-input-${p.id}" class="comment-input" style="background:#fff" placeholder="رسالة سريعة للكل...">
-                                    <button class="comment-submit" style="background:var(--purp)" onclick="sendGroupMsg('${p.id}')"><i class="fas fa-paper-plane"></i></button>
-                                </div>
-                            </div>`;
+                    let shareBtnHtml = '';
+                    if(tab === 'emotions') {
+                        shareBtnHtml = `<button class="action-btn" onclick="sharePost('${p.id}', '${p.content.substring(0,50)}')"><i class="far fa-share-square"></i> مشاركة</button>`;
                     }
 
                     return `
@@ -263,9 +263,8 @@
                                     <i class="${p.user_liked ? 'fas' : 'far'} fa-heart"></i> <span>${p.likes_count || 'إعجاب'}</span>
                                 </button>
                                 <button class="action-btn" onclick="document.getElementById('input-${p.id}').focus()"><i class="far fa-comment"></i> تعليق</button>
-                                <button class="action-btn" onclick="sharePost('${p.id}', '${p.content.substring(0,50)}')"><i class="far fa-share-square"></i> مشاركة</button>
+                                ${shareBtnHtml}
                             </div>
-                            ${swingChatHtml}
                             <div class="comments-section">
                                 <div id="comment-list-${p.id}">${commentsHtml}</div>
                                 <div class="comment-input-area">
@@ -301,7 +300,7 @@
                 dummy.select(); 
                 document.execCommand('copy'); 
                 document.body.removeChild(dummy); 
-                Swal.fire({ toast: true, position: 'top-end', icon: 'success', title: 'تم نسخ الرابط لمشاركته!', showConfirmButton: false, timer: 2000 }); 
+                Swal.fire({ toast: true, position: 'top-end', icon: 'success', title: 'تم نسخ الرابط!', showConfirmButton: false, timer: 2000 }); 
             }
         }
 
@@ -314,25 +313,14 @@
             input.value = '';
         }
 
-        function sendGroupMsg(postId) {
-            const input = document.getElementById(`group-input-${postId}`);
-            if(!input.value.trim()) return;
-            const chatBox = document.getElementById(`group-chat-msgs-${postId}`);
-            chatBox.innerHTML += `<div class="chat-msg-item"><strong>أنتِ:</strong> ${input.value}</div>`;
-            chatBox.scrollTop = chatBox.scrollHeight;
-            input.value = '';
-        }
-
-        // وظائف الذكاء الاصطناعي الجديدة
         function startVoiceRecognition() {
             const SpeechRecognition = window.SpeechRecognition || window.webkitSpeechRecognition;
-            if (!SpeechRecognition) { Swal.fire('عذراً', 'متصفحك لا يدعم التعرف على الصوت', 'error'); return; }
+            if (!SpeechRecognition) { Swal.fire('عذراً', 'المتصفح لا يدعم الميكروفون', 'error'); return; }
             const recognition = new SpeechRecognition();
             recognition.lang = 'ar-SA';
             recognition.onstart = () => { document.getElementById('mic-btn').style.color = 'red'; };
             recognition.onresult = (event) => {
-                const transcript = event.results[0][0].transcript;
-                document.getElementById('chat-input').value = transcript;
+                document.getElementById('chat-input').value = event.results[0][0].transcript;
                 document.getElementById('mic-btn').style.color = 'var(--p2)';
             };
             recognition.start();
@@ -340,25 +328,20 @@
 
         function readText(text) {
             const msg = new SpeechSynthesisUtterance();
-            msg.text = text;
-            msg.lang = 'ar-SA';
-            window.speechSynthesis.speak(msg);
+            msg.text = text; msg.lang = 'ar-SA'; window.speechSynthesis.speak(msg);
         }
 
         function capturePhoto() {
-            Swal.fire({ title: 'فتح الكاميرا', text: 'سيتم تشغيل الكاميرا لتحليل الصورة', icon: 'info', confirmButtonText: 'حسناً' });
-            // محاكاة فتح الكاميرا في المتصفح
             const input = document.createElement('input');
-            input.type = 'file';
-            input.accept = 'image/*';
-            input.capture = 'camera';
+            input.type = 'file'; input.accept = 'image/*'; input.capture = 'camera';
+            input.onchange = () => sendMediaMsg('صورة كاميرا');
             input.click();
         }
 
         function sendMediaMsg(type) {
             const container = document.getElementById('chat-messages');
-            container.innerHTML += `<div class="msg msg-user">تم إرسال ${type} للتحليل...</div>`;
-            sendMessage(true, `لقد أرسلتُ ${type}، يرجى تحليلها.`);
+            container.innerHTML += `<div class="msg msg-user">تم رفع ${type} للتحليل..</div>`;
+            sendMessage(true, `لقد أرسلتُ ${type}، حلليها لي.`);
         }
 
         function openAIChat(section) { document.getElementById('chat-title').innerText = section; document.getElementById('chat-overlay').style.display = 'flex'; loadHistory(); }
@@ -380,19 +363,14 @@
             try {
                 const res = await fetch('/api/raqqa-ai', { method: 'POST', headers: {'Content-Type':'application/json'}, body: JSON.stringify({ prompt: msg }) });
                 const data = await res.json();
-                const replyId = 'rep-' + Date.now();
                 container.innerHTML += `
                     <div class="msg msg-ai">
                         ${data.reply}
-                        <div style="text-align:left; margin-top:5px;">
-                            <i class="fas fa-volume-up speak-btn" onclick="readText('${data.reply.replace(/'/g, "\\'")}')"></i>
-                        </div>
+                        <div style="text-align:left; margin-top:5px;"><i class="fas fa-volume-up speak-btn" onclick="readText('${data.reply.replace(/'/g, "\\'")}')"></i></div>
                     </div>`;
                 chatHistory.unshift({ q: msg, a: data.reply, date: getNow().time });
                 localStorage.setItem('raqqa_history', JSON.stringify(chatHistory.slice(0, 20)));
-            } catch(e) { 
-                container.innerHTML += `<div class="msg msg-ai">رقة معكِ.. جاري معالجة استفساركِ. <i class="fas fa-volume-up speak-btn" onclick="readText('جاري معالجة استفسارك')"></i></div>`; 
-            }
+            } catch(e) { container.innerHTML += `<div class="msg msg-ai">رقة معكِ.. جاري معالجة استفساركِ.</div>`; }
             container.scrollTop = container.scrollHeight;
         }
 
@@ -409,4 +387,4 @@
         window.onload = () => nav('home', document.querySelector('.nav-link'));
     </script>
 </body>
-                </html>
+</html>
