--- a/index.html
+++ b/index.html
@@ -286,60 +286,58 @@
             fetch('/api/likes', { method: 'POST', headers: {'Content-Type': 'application/json'}, body: JSON.stringify({ post_id: postId, action: isLiked ? 'like' : 'unlike' }) });
         }
 
-        /** * وظيفة المشاركة المتطورة - "تغليف المحتوى"
-         * تقوم بتحويل الرابط إلى ملف حقيقي لضمان قبوله في أندرويد و iOS
+        /**
+         * وظيفة المشاركة النهائية: تدمج النص الطويل مع ملفات الوسائط
          */
-        async function sharePost(text, mediaUrl) {
-            const shareData = {
-                title: 'تطبيق رقة 🌸',
-                text: text,
-                url: window.location.href
-            };
-
+        async function sharePost(content, mediaUrl) {
+            // تنظيف النص وضمان وجود رابط التطبيق في النهاية
+            const finalDescription = content + "\n\nتمت المشاركة من تطبيق رقة 🌸\n";
+            
             try {
-                // 1. التحقق من وجود ميديا (صورة أو فيديو)
+                // في حال وجود ميديا، نقوم بتجهيزها كملف
                 if (mediaUrl && navigator.canShare) {
-                    // إظهار تنبيه بسيط للمستخدم بأن المعالجة جارية
-                    Swal.fire({ title: 'جاري التجهيز...', timer: 800, showConfirmButton: false, didOpen: () => Swal.showLoading() });
+                    Swal.fire({ title: 'جاري تجهيز المنشور...', allowOutsideClick: false, didOpen: () => Swal.showLoading() });
 
                     const response = await fetch(mediaUrl);
                     const blob = await response.blob();
-                    
-                    // استخراج الامتداد الصحيح للملف
                     const extension = mediaUrl.split('.').pop().split(/\#|\?/)[0] || 'jpg';
-                    const fileName = `raqqa_media.${extension}`;
-                    const file = new File([blob], fileName, { type: blob.type });
+                    const file = new File([blob], `raqqa_post.${extension}`, { type: blob.type });
 
-                    // 2. التحقق هل النظام يدعم مشاركة هذا النوع من الملفات
+                    // التحقق من إمكانية مشاركة الملف مع النص
                     if (navigator.canShare({ files: [file] })) {
-                        // إضافة الملف إلى بيانات المشاركة
                         await navigator.share({
                             files: [file],
-                            title: shareData.title,
-                            text: shareData.text
+                            title: 'رقة ✨',
+                            text: finalDescription // النص الطويل هنا
                         });
-                        return; // نجحت المشاركة كملف
+                        Swal.close();
+                        return;
                     }
                 }
 
-                // 3. الحل البديل: مشاركة كنص ورابط (للمتصفحات التي لا تدعم الملفات)
+                // إذا لم يوجد ميديا أو المتصفح لا يدعم مشاركة الملفات، نشارك النص فقط
                 if (navigator.share) {
-                    await navigator.share(shareData);
+                    await navigator.share({
+                        title: 'رقة ✨',
+                        text: finalDescription,
+                        url: window.location.href
+                    });
                 } else {
-                    throw new Error('Not supported');
+                    throw new Error('Web Share API not supported');
                 }
 
             } catch (err) {
-                console.log("Share failed:", err);
-                // 4. الحل الأخير: نسخ الرابط للحافظة
-                const dummy = document.createElement('input'); 
-                document.body.appendChild(dummy); 
-                dummy.value = window.location.href; 
-                dummy.select(); 
-                document.execCommand('copy'); 
-                document.body.removeChild(dummy); 
-                Swal.fire({ toast: true, position: 'top-end', icon: 'success', title: 'تم نسخ الرابط لمشاركته!', showConfirmButton: false, timer: 2000 });
+                console.log("Sharing error:", err);
+                // حل أخير: نسخ النص والوصف للحافظة
+                const tempInput = document.createElement('textarea');
+                tempInput.value = finalDescription + " " + window.location.href;
+                document.body.appendChild(tempInput);
+                tempInput.select();
+                document.execCommand('copy');
+                document.body.removeChild(tempInput);
+                Swal.fire({ toast: true, position: 'top-end', icon: 'success', title: 'تم نسخ النص والوابط لمشاركتها!', showConfirmButton: false, timer: 3000 });
             }
+            Swal.close();
         }
 
         async function submitComment(postId) {
@@ -433,4 +431,4 @@
         window.onload = () => nav('home', document.querySelector('.nav-link'));
     </script>
 </body>
-                </html>
+        </html>
